--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				var count = 1;
 				var pass1 = prompt('Please Enter Your Password',' ');
 				//change to your password
-				var password = "ItsPrashant8188"
+				var password = "ItsPrashant"
 				//max attempts
 				var maxattempt = 4
 				 
